--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,11 @@
-<mat-toolbar-row>
-  <div class="footer">
-    <p>
-      NY Times Popular Articles
-    </p>
-  </div>
-</mat-toolbar-row>
+<div class="footer">
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <div class="footer-content">
+        <p>
+          NY Times Popular Articles
+        </p>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</div>
