--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <h1>NY Times Articles</h1>
+    <span class="menu-spacer"></span>
+    <div>
+      <button mat-button [routerLink]="'/'"> Home </button>
+    </div>
   </mat-toolbar-row>
 </mat-toolbar>
