--- a/src/app/articles/components/article-list/article-list.component.html
+++ b/src/app/articles/components/article-list/article-list.component.html
@@ -1,1 +1,7 @@
-<p>article-list works!</p>
+<div class="container-fluid">
+  <div class="row" *ngFor="let article of articles">
+    <div class="col m-4">
+      <app-article-card [article]="article"></app-article-card>
+    </div>
+  </div>
+</div>
