minor design and routing changes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-raised-button color="primary" [routerLink]="'articles/list'">
+        <button mat-raised-button color="primary" [routerLink]="'articles/list'" [queryParams]="{section: 'world'}">
           <mat-icon>link</mat-icon> View
         </button>
       </mat-card-actions>
@@ -28,7 +28,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-raised-button color="primary" [routerLink]="'articles/list'">
+        <button mat-raised-button color="primary" [routerLink]="'articles/list'" [queryParams]="{section: 'science'}">
           <mat-icon>link</mat-icon> View
         </button>
       </mat-card-actions>
