--- a/src/app/articles/components/article-card/article-card.component.html
+++ b/src/app/articles/components/article-card/article-card.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card matRipple>
   <mat-card-header>
     <mat-card-subtitle>{{ article.published_date | date: 'medium' }}</mat-card-subtitle>
     <mat-card-title>{{ article.title }}</mat-card-title>
