--- a/src/app/articles/components/article-list/article-list.component.html
+++ b/src/app/articles/components/article-list/article-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <div class="row" *ngFor="let article of articles">
+  <div class="row" *ngFor="let article of articles$ | async">
     <div class="col m-4">
-      <app-article-card [article]="article"></app-article-card>
+      <app-article-card [article]="article" [routerLink]="['/articles/detail', article.uri]"></app-article-card>
     </div>
   </div>
 </div>
