--- a/src/app/articles/components/article-detail/article-detail.component.html
+++ b/src/app/articles/components/article-detail/article-detail.component.html
@@ -23,6 +23,20 @@
             <mat-chip color="primary" selected="true" *ngFor="let facet of article.des_facet">{{ facet }}</mat-chip>
           </mat-chip-list>
         </mat-card>
+
+        <h3 *ngIf="comments$ | async" class="mt-4">Comments</h3>
+
+        <mat-card class="mt-4" *ngFor="let comment of comments$ | async">
+          <mat-card-header>
+            <mat-card-title>{{ comment.userDisplayName }}</mat-card-title>
+            <mat-card-subtitle>{{ comment.createDate | date: 'medium' }}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <p>
+              {{ comment.commentBody }}
+            </p>
+          </mat-card-content>
+        </mat-card>
       </div>
     </div>
   </div>
