--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,11 +1,24 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <h1>NY Times Articles</h1>
-    <span class="menu-spacer"></span>
-    <div>
-      <button mat-button [routerLink]="'/'"> Home </button>
-      <button mat-button [routerLink]="'articles/list'" [queryParams]="{section: 'world'}"> World </button>
-      <button mat-button [routerLink]="'articles/list'" [queryParams]="{section: 'science'}"> Science </button>
-    </div>
-  </mat-toolbar-row>
+<mat-toolbar fxLayout="row" color="primary">
+  <span fxFlex>NY Times Articles</span>
+  <button mat-button *ngFor="let item of menuItems" [fxShow]="item.showOnDesktop" [fxShow.xs]="item.showOnMobile"
+    [fxShow.sm]="item.showOnTablet" [routerLink]="item.route" [queryParams]="item.queryParam">
+    <mat-icon class="mr">{{item.icon}}</mat-icon>
+    {{item.label}}
+  </button>
+  <ng-container>
+    <button mat-icon-button [matMenuTriggerFor]="dropMenu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #dropMenu="matMenu">
+      <ng-container *ngFor="let item of menuItems">
+        <div [fxShow]="!item.showOnDesktop" [fxShow.sm]="!item.showOnTablet" [fxShow.xs]="!item.showOnMobile">
+          <button mat-menu-item [routerLink]="item.route" [queryParams]="item.queryParam">
+            <mat-icon color="primary" class="mr">{{item.icon}}</mat-icon>
+            {{item.label}}
+          </button>
+          <mat-divider></mat-divider>
+        </div>
+      </ng-container>
+    </mat-menu>
+  </ng-container>
 </mat-toolbar>
