--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,11 @@
 <h3 class="text-center mt-2">The New York Times seeks the truth and helps people understand the world.</h3>
 
+<div class="text-center mt-4 mb-4">
+  <button mat-raised-button color="primary" [routerLink]="'articles/search'">
+    <mat-icon>search</mat-icon> Search Articles
+  </button>
+</div>
+
 <div class="row">
   <div class="col m-3">
     <mat-card class="section-card">
