--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.form-field {
+  padding-bottom: 10px;
+  width: 100%;
+}
